--- a/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
@@ -48,15 +48,19 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-page="/Profile">Profile</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-page="/Join">Join</a>
-                        </li>
-                        @if (string.IsNullOrEmpty(HttpContextAccessor.HttpContext?.Session.GetString("email")) == true){
-                        <li class="nav-item">
-                            <a class="nav-link" asp-page="/Login">Login</a>
+                       
+                        @if (Context.Session.GetString("SSN") == null)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-page="/Join">Join</a>
                             </li>
+                            @if (string.IsNullOrEmpty(HttpContextAccessor.HttpContext?.Session.GetString("email")) == true) {
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-page="/Login">Login</a>
+                                </li>
+                            }
                         }
-                        
+
                         
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="activitiesDropdown" role="button" data-bs-toggle="dropdown">
