--- a/IEEE_EMB/IEEE_EMB/Pages/DetailsPage.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/DetailsPage.cshtml
@@ -46,6 +46,7 @@
                         allowfullscreen></iframe>
                 <div class="project-info-box">
                     <p><b>Categories:</b> Seminar Details</p>
+                    <p><b>Document:</b> <a href="@Model.session.Rows[i][7]">Documentation File</a></p>
                   
                 </div>
             </div>
