--- a/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
@@ -45,13 +45,16 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-page="/Contact">Contact</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-page="/Profile">Profile</a>
-                        </li>
+                        @if (!string.IsNullOrEmpty(HttpContextAccessor.HttpContext?.Session.GetString("AuthenticationString")))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-page="/Profile">Profile</a>
+                            </li>
+                        }
                         <li class="nav-item">
                             <a class="nav-link" asp-page="/Join">Join</a>
                         </li>
-                        @if (string.IsNullOrEmpty(HttpContextAccessor.HttpContext?.Session.GetString("email")) == true){
+                        @if (string.IsNullOrEmpty(HttpContextAccessor.HttpContext?.Session.GetString("Email")) == true){
                         <li class="nav-item">
                             <a class="nav-link" asp-page="/Login">Login</a>
                             </li>
