updated front end

--- a/IEEE_EMB/IEEE_EMB/Pages/About.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/About.cshtml
@@ -10,9 +10,9 @@
         <div class="container">
             <h1 class="display-4 mb-4">About us</h1>
             <p class="lead">
-                Lorem ipsum dolor sit consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                IEEE Bioinformatics is more than just a professional society; it's a vibrant ecosystem that empowers individuals and organizations to make a real difference in the world.
             </p>
-            <a href="#learn-more" class="btn btn-light mt-3">Read More</a>
+           
         </div>
     </section>
 
@@ -27,7 +27,11 @@
                 <div class="col-md-8">
                     <h2 class="mb-4">Who are we?</h2>
                     <p class="lead">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.
+                        IEEE Bioinformatics is the premier global society dedicated to fostering the development and application of computational methods in the fields of biology and medicine. We serve as a vital hub for researchers, scientists, and engineers, providing a dynamic platform to connect, collaborate, and drive groundbreaking advancements in this rapidly evolving field.
+                    </p>
+                    <br />
+                    <p>
+                        Our mission is to advance the understanding of biological systems and accelerate the development of innovative solutions that improve human health and well-being. We achieve this by promoting interdisciplinary research, facilitating knowledge exchange, and supporting the professional growth of our members.
                     </p>
                 </div>
             </div>
