--- a/IEEE_EMB/IEEE_EMB/Pages/Index.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Index.cshtml
@@ -19,9 +19,10 @@
             </div>
             <div class="col-lg-6">
                 <div class="hero-content">
-                    <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                    <a href="#" class="btn btn-primary btn-lg">Learn more</a>
+                    <h1>Unlocking the Power of Biological Data</h1>
+                    <h6>IEEE Bioinformatics: Advancing Computational Biology and Medicine</h6>
+                    <p class="lead">IEEE Bioinformatics is the leading international society for the advancement of computational biology and medicine....</p>
+                    <a href="/About" class="btn btn-primary btn-lg">Learn more</a>
                 </div>
             </div>
         </div>
