--- a/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
@@ -36,9 +36,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-page="/Index">Home</a>
                         </li>
-                        <li class="nav-item">
+                      @*   <li class="nav-item">
                             <a class="nav-link" asp-page="/About">About</a>
-                        </li>
+                        </li> *@
                         <li class="nav-item">
                             <a class="nav-link" asp-page="/Announcments">Announcements</a>
                         </li>
