--- a/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
@@ -36,19 +36,16 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-page="/Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-page="/About">About</a>
-                        </li>
+                        
                         <li class="nav-item">
                             <a class="nav-link" asp-page="/Announcments">Announcements</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-page="/Contact">Contact</a>
-                        </li>
+                     
+                        @if (Context.Session.GetString("SSN") != null){
                         <li class="nav-item">
                             <a class="nav-link" asp-page="/Profile">Profile</a>
                         </li>
-                       
+                        }
                         @if (Context.Session.GetString("SSN") == null)
                         {
                             <li class="nav-item">
