admitting issue resolved participants is now through login

--- a/IEEE_EMB/IEEE_EMB/Pages/Login.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Login.cshtml
@@ -86,7 +86,7 @@
 
                         <p class="text-center mt-4 mb-0 animate-slide-up" style="--delay: 0.7s">
                             Don't have an account? 
-                            <a href="#" class="signup-link">Sign up</a>
+                            <a href="/Join" class="signup-link">Sign up</a>
                         </p>
                     </form>
                 </div>
