--- a/IEEE_EMB/IEEE_EMB/Pages/ParticipantForm.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/ParticipantForm.cshtml
@@ -119,6 +119,11 @@
                         <span asp-validation-for="@Model.Email" class="form-error"></span>
                     </div>
                     <div class="form-group">
+                        <label asp-for="@Model.Password" class="form-label">Password</label>
+                        <input asp-for="@Model.Password" type="password" class="form-input w-full" required />
+                        <span asp-validation-for="@Model.Password" class="form-error"></span>
+                    </div>
+                    <div class="form-group">
                         <label asp-for="@Model.Phone" class="form-label">Contact Number</label>
                         <input asp-for="@Model.Phone" type="tel" class="form-input w-full" required />
                         <span asp-validation-for="@Model.Phone" class="form-error"></span>
