--- a/IEEE_EMB/IEEE_EMB/Pages/Seminars.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Seminars.cshtml
@@ -114,7 +114,7 @@
                         {
                                 @if (string.IsNullOrEmpty(HttpContext.Session.GetString("AuthenticationString")))
                                 {
-                                    <a asp-page="/ParticipantForm" class="btn btn-primary me-md-2 flex-grow-1">
+                                    <a asp-page="/Login" class="btn btn-primary me-md-2 flex-grow-1">
                                         Enroll Now
                                     </a>
                                 }
