--- a/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
@@ -72,6 +72,18 @@
                                 <li><a class="dropdown-item" href="Journal">Journal Club</a></li>
                             </ul>
                         </li>
+
+                        @if (!string.IsNullOrEmpty(HttpContextAccessor.HttpContext?.Session.GetString("AuthenticationString")))
+                        {
+                            <li class="nav-item">
+                                <form method="post" asp-page-handler="Logout" style="display: inline;">
+                                    <button type="submit" class="nav-link btn btn-link">
+                                        Logout
+                                    </button>
+                                </form>
+                            </li>
+                        }
+
                     </ul>
                 </div>
             </div>
