--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/Activities.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/Activities.cshtml
@@ -1,4 +1,6 @@
 ﻿@page
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+
 @model IEEE_EMB.Pages.Admin.ActivitiesModel
 @{
 }
@@ -7,9 +9,14 @@
 }
 <div class="container-xxl flex-grow-1 container-p-y">
     <!-- Add Activity Button -->
-    <div class="mb-4">
-        <a href="/Admin/AddActivity" class="btn btn-primary">Add Activity</a>
-    </div>
+       @{
+        if (HttpContextAccessor.HttpContext?.Session.GetString("AuthenticationString") == "Admin")
+        {
+            <div class="mb-4">
+                <a href="/Admin/AddActivity" class="btn btn-primary">Add Activity</a>
+            </div>
+         }
+       }
 
     <div class="card">
         <h5 class="card-header">All Activities</h5>
@@ -25,7 +32,12 @@
                         <th>Status</th>
                         <th>Mentor</th>
                         <th>Sessions</th>
-                        <th>Actions</th>
+                        @if (HttpContextAccessor.HttpContext?.Session.GetString("AuthenticationString") == "Admin")
+                        {
+                            
+                            <th>Actions</th>
+                        }
+
                     </tr>
                 </thead>
                 <tbody class="table-border-bottom-0">
@@ -40,11 +52,12 @@
                         <td><strong>@activity.Type</strong></td>
                         <td><strong>@activity.status</strong></td>
                         <td><strong>@activity.mentorName</strong></td>
-                        <td><strong>@activity.Id</strong></td>
 
                         <td><strong><a href="/Admin/Session?activityId=@activity.Id">Sessions</a></strong></td>
-                       
-                        <td>
+                         @if (HttpContextAccessor.HttpContext?.Session.GetString("AuthenticationString") == "Admin")
+                            {
+                                
+                            <td>
                             <div class="dropdown">
                                 <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
                                     <i class="bx bx-dots-vertical-rounded"></i>
@@ -63,7 +76,8 @@
 
                                 </div>
                             </div>
-                        </td>
+                            </td>
+                            }
                     </tr>
                         <div class="modal fade" id="dataModal" tabindex="-1" aria-labelledby="dataModalLabel" aria-hidden="true">
                             <div class="modal-dialog">
@@ -93,27 +107,6 @@
     </div>
 </div>
 
-@* <div class="modal fade" id="dataModal" tabindex="-1" aria-labelledby="dataModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="dataModalLabel">Confirm Deletion</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <form method="post" asp-page-handler="Delete">
-                <div class="modal-body">
-                    <p>Are you sure you want to delete <strong id="itemNamePlaceholder"></strong>?</p>
-                    <!-- Hidden input to store the item ID -->
-                    <input type="hidden" id="itemIdInput" name="ItemId" value="">
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Confirm</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div> *@
 
 @section Scripts {
     <script>
