--- a/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,8 @@
                             <i class="fas fa-search"></i>
                         </button>
                     </div>
-                    @if(HttpContextAccessor.HttpContext?.Session.GetString("AuthenticationString") == "Admin"){
+                    @if (HttpContextAccessor.HttpContext?.Session.GetString("AuthenticationString") == "Admin" || HttpContextAccessor.HttpContext?.Session.GetString("AuthenticationString") == "Mentor")
+                    {
                     @* <button class="btn btn-outline-primary ms-2">Manage Dashboard </button> *@
                         <a asp-page="/Admin/DashBoard" class="btn btn-outline-primary ms-2">Manage Dashboard</a>
                     }
