--- a/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
@@ -48,14 +48,16 @@
                         }
                         @if (Context.Session.GetString("SSN") == null)
                         {
-                           @*  <li class="nav-item">
+                            <li class="nav-item">
                                 <a class="nav-link" asp-page="/Join">Join</a>
-                            </li> *@
-                            @if (string.IsNullOrEmpty(HttpContextAccessor.HttpContext?.Session.GetString("email")) == true) {
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-page="/Login">Login</a>
-                                </li>
-                            }
+                            </li>
+                            
+                        }
+                        @if (string.IsNullOrEmpty(HttpContextAccessor.HttpContext?.Session.GetString("Email")) == true)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-page="/Login">Login</a>
+                            </li>
                         }
 
                         
