- Add Participants link with each activity to show the participants for a certain activity only - Add / Delete / Read Admin - Add CV Column for Admin in the dashboard

--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/Activities.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/Activities.cshtml
@@ -32,6 +32,7 @@
                         <th>Status</th>
                         <th>Mentor</th>
                         <th>Sessions</th>
+                        <th>Participants</th>
                         @if (HttpContextAccessor.HttpContext?.Session.GetString("AuthenticationString") == "Admin")
                         {
                             
@@ -54,6 +55,7 @@
                         <td><strong>@activity.mentorName</strong></td>
 
                         <td><strong><a href="/Admin/Session?activityId=@activity.Id">Sessions</a></strong></td>
+                        <td><strong><a href="/Admin/AllParticipants?activityId=@activity.Id">Participants</a></strong></td>
                          @if (HttpContextAccessor.HttpContext?.Session.GetString("AuthenticationString") == "Admin")
                             {
                                 
