--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/AllParticipants.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/AllParticipants.cshtml
@@ -30,9 +30,9 @@
                     {
                         
                     <tr>
-                            <td><strong>@Model.participants.Rows[i][1]</strong></td>
-                            <td><strong>@Model.participants.Rows[i][3]</strong></td>
-                            <td><strong>@Model.participants.Rows[i][6]</strong></td>
+                            <td><strong>@Model.participants.Rows[i]["NAME"]</strong></td>
+                            <td><strong>@Model.participants.Rows[i]["EMAIL"]</strong></td>
+                            <td><strong>@Model.participants.Rows[i]["UNIVERSITY"]</strong></td>
                         <td>
                             <div class="dropdown">
                                 <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
