--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/AddAdmin.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/AddAdmin.cshtml
@@ -18,37 +18,37 @@
                 <!-- Name -->
                 <div class="form-group">
                     <label for="Name" class="control-label">Name</label>
-                    <input id="Name" name="Name" class="form-control" />
+                    <input asp-for="@Model.admin.Name" type="text" class="form-control" />
                 </div>
 
                 <!-- Email -->
                 <div class="form-group">
                     <label for="Email" class="control-label">Email</label>
-                    <input id="Email" name="Email" type="email" class="form-control" />
+                    <input asp-for="@Model.admin.Email" type="email" class="form-control" />
                 </div>
 
                 <!-- Password -->
                 <div class="form-group">
                     <label for="Password" class="control-label">Password</label>
-                    <input id="Password" name="Password" type="password" class="form-control" />
+                    <input asp-for="@Model.admin.password" type="password" class="form-control" />
                 </div>
 
                 <!-- Role -->
                 <div class="form-group">
                     <label for="Role" class="control-label">Role</label>
-                    <input id="Role" name="Role" class="form-control" />
+                    <input asp-for="@Model.admin.Role" class="form-control" />
                 </div>
 
                 <!-- CV -->
                 <div class="form-group">
                     <label for="CV" class="control-label">CV</label>
-                    <input id="CV" name="CV" type="file" class="form-control" />
+                    <input asp-for="@Model.admin.CV" type="file" class="form-control" />
                 </div>
 
                 <!-- Phone Number -->
                 <div class="form-group">
                     <label for="PhoneNumber" class="control-label">Phone Number</label>
-                    <input id="PhoneNumber" name="PhoneNumber" type="tel" class="form-control" />
+                    <input asp-for="@Model.admin.Phone" type="tel" class="form-control" />
                 </div>
 
                 <div class="form-group mt-3">
