--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/AllAdmins.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/AllAdmins.cshtml
@@ -21,36 +21,40 @@
                         <th>Name</th>
                         <th>Email</th>
                         <th>University</th>
+                        <th>CV</th>
                         <th>Actions</th>
 
                     </tr>
                 </thead>
                 <tbody class="table-border-bottom-0">
-                   
+                    @for (int i = 1; i < Model.adminsTable.Rows.Count; i++)
+                    {
                         <tr>
-                            <td><strong>Amira</strong></td>
-                            <td><strong>Amira@gmail.com</strong></td>
-                            <td><strong>zewailcity</strong></td>
-                        <td>
-                            <div class="dropdown">
-                                <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                                    <i class="bx bx-dots-vertical-rounded"></i>
-                                </button>
-                                <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="/Admin/EditAdmin">
-                                        <i class="bx bx-edit-alt me-1"></i> Edit
-                                    </a>
-                                    <a class="dropdown-item delete-btn"
-                                       href="javascript:void(0);"
-                                       data-id=""
-                                       data-title="">
-                                        <i class="bx bx-trash me-1"></i> Delete
-                                    </a>
+                            <td><strong>@Model.adminsTable.Rows[i][0]</strong></td>
+                            <td><strong>@Model.adminsTable.Rows[i][1]</strong></td>
+                            <td><strong>@Model.adminsTable.Rows[i][2]</strong></td>
+                            <td><strong><a href="~/Documents/@Model.adminsTable.Rows[i][3]">CV</a></strong></td>
+                            <td>
+                                <div class="dropdown">
+                                    <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
+                                        <i class="bx bx-dots-vertical-rounded"></i>
+                                    </button>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="/Admin/EditAdmin">
+                                            <i class="bx bx-edit-alt me-1"></i> Edit
+                                        </a>
+                                        <a class="dropdown-item delete-btn"
+                                        href="javascript:void(0);"
+                                        data-id=""
+                                        data-title="">
+                                            <i class="bx bx-trash me-1"></i> Delete
+                                        </a>
+                                    </div>
                                 </div>
-                            </div>
-                        </td>
+                            </td>
                         </tr>
-                    
+                    }
+
                 </tbody>
             </table>
         </div>
