--- a/IEEE_EMB/IEEE_EMB/Pages/Shared/DashLayout.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Shared/DashLayout.cshtml
@@ -24,7 +24,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 
-    <title>IEE_EMB</title>
+    <title>IEEE EMB</title>
 
     <meta name="description" content="" />
 
