--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/AllMembers.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/AllMembers.cshtml
@@ -26,10 +26,14 @@
                 </thead>
                 <tbody class="table-border-bottom-0">
                    
+                      
+                        @for (int i = 0; i < Model.dt.Rows.Count; i++)
+                        {
                         <tr>
-                            <td><strong>Amira</strong></td>
-                            <td><strong>Amira@gmail.com</strong></td>
-                            <td><strong>zewailcity</strong></td>
+                            <td><strong>@Model.dt.Rows[i][6]</strong></td>
+                            <td><strong>@Model.dt.Rows[i][4]</strong></td>
+                            <td><strong>@Model.dt.Rows[i][10]</strong></td>
+                        
                         <td>
                             <div class="dropdown">
                                 <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
@@ -49,6 +53,7 @@
                             </div>
                         </td>
                         </tr>
+                        }
                     
                 </tbody>
             </table>
